crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_equation_attributes_no_blank_line.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..52
  PARAGRAPH@0..52
    DISPLAY_MATH@0..11
      DISPLAY_MATH_MARKER@0..2 "$$"
      TEXT@2..9 "\na = b\n"
      DISPLAY_MATH_MARKER@9..11 "$$"
    WHITESPACE@11..12 " "
    ATTRIBUTE@12..32
      ATTRIBUTE@12..32 "{#eq-primal-problem}"
    NEWLINE@32..33 "\n"
    CROSSREF@33..51
      CROSSREF_MARKER@33..34 "@"
      CROSSREF_KEY@34..51 "eq-primal-problem"
    NEWLINE@51..52 "\n"
