crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_grid_table_nordics.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..1380
  GRID_TABLE@0..1380
    TABLE_SEPARATOR@0..82
      TEXT@0..81 "+-------------------- ..."
      NEWLINE@81..82 "\n"
    TABLE_HEADER@82..246
      TEXT@82..83 "|"
      WHITESPACE@83..84 " "
      TABLE_CELL@84..88
        TEXT@84..88 "Name"
      WHITESPACE@88..106 "                  "
      TEXT@106..107 "|"
      WHITESPACE@107..108 " "
      TABLE_CELL@108..115
        TEXT@108..115 "Capital"
      WHITESPACE@115..130 "               "
      TEXT@130..131 "|"
      WHITESPACE@131..132 " "
      TABLE_CELL@132..143
        TEXT@132..143 "Population\\"
      WHITESPACE@143..146 "   "
      TEXT@146..147 "|"
      WHITESPACE@147..148 " "
      TABLE_CELL@148..153
        TEXT@148..153 "Area\\"
      WHITESPACE@153..162 "         "
      TEXT@162..163 "|"
      NEWLINE@163..164 "\n"
      TEXT@164..245 "|                     ..."
      NEWLINE@245..246 "\n"
    TABLE_SEPARATOR@246..328
      TEXT@246..327 "+:=================== ..."
      NEWLINE@327..328 "\n"
    TABLE_ROW@328..410
      TEXT@328..329 "|"
      WHITESPACE@329..330 " "
      TABLE_CELL@330..337
        TEXT@330..337 "Denmark"
      WHITESPACE@337..352 "               "
      TEXT@352..353 "|"
      WHITESPACE@353..354 " "
      TABLE_CELL@354..364
        TEXT@354..364 "Copenhagen"
      WHITESPACE@364..376 "            "
      TEXT@376..377 "|"
      WHITESPACE@377..378 " "
      TABLE_CELL@378..387
        TEXT@378..387 "5,809,502"
      WHITESPACE@387..392 "     "
      TEXT@392..393 "|"
      WHITESPACE@393..394 " "
      TABLE_CELL@394..400
        TEXT@394..400 "43,094"
      WHITESPACE@400..408 "        "
      TEXT@408..409 "|"
      NEWLINE@409..410 "\n"
    TABLE_SEPARATOR@410..492
      TEXT@410..491 "+-------------------- ..."
      NEWLINE@491..492 "\n"
    TABLE_ROW@492..574
      TEXT@492..493 "|"
      WHITESPACE@493..494 " "
      TABLE_CELL@494..501
        TEXT@494..501 "Finland"
      WHITESPACE@501..516 "               "
      TEXT@516..517 "|"
      WHITESPACE@517..518 " "
      TABLE_CELL@518..526
        TEXT@518..526 "Helsinki"
      WHITESPACE@526..540 "              "
      TEXT@540..541 "|"
      WHITESPACE@541..542 " "
      TABLE_CELL@542..551
        TEXT@542..551 "5,537,364"
      WHITESPACE@551..556 "     "
      TEXT@556..557 "|"
      WHITESPACE@557..558 " "
      TABLE_CELL@558..565
        TEXT@558..565 "338,145"
      WHITESPACE@565..572 "       "
      TEXT@572..573 "|"
      NEWLINE@573..574 "\n"
    TABLE_SEPARATOR@574..656
      TEXT@574..655 "+-------------------- ..."
      NEWLINE@655..656 "\n"
    TABLE_ROW@656..738
      TEXT@656..657 "|"
      WHITESPACE@657..658 " "
      TABLE_CELL@658..665
        TEXT@658..665 "Iceland"
      WHITESPACE@665..680 "               "
      TEXT@680..681 "|"
      WHITESPACE@681..682 " "
      TABLE_CELL@682..691
        TEXT@682..691 "Reykjavik"
      WHITESPACE@691..704 "             "
      TEXT@704..705 "|"
      WHITESPACE@705..706 " "
      TABLE_CELL@706..713
        TEXT@706..713 "343,518"
      WHITESPACE@713..720 "       "
      TEXT@720..721 "|"
      WHITESPACE@721..722 " "
      TABLE_CELL@722..729
        TEXT@722..729 "103,000"
      WHITESPACE@729..736 "       "
      TEXT@736..737 "|"
      NEWLINE@737..738 "\n"
    TABLE_SEPARATOR@738..820
      TEXT@738..819 "+-------------------- ..."
      NEWLINE@819..820 "\n"
    TABLE_ROW@820..902
      TEXT@820..821 "|"
      WHITESPACE@821..822 " "
      TABLE_CELL@822..828
        TEXT@822..828 "Norway"
      WHITESPACE@828..844 "                "
      TEXT@844..845 "|"
      WHITESPACE@845..846 " "
      TABLE_CELL@846..850
        TEXT@846..850 "Oslo"
      WHITESPACE@850..868 "                  "
      TEXT@868..869 "|"
      WHITESPACE@869..870 " "
      TABLE_CELL@870..879
        TEXT@870..879 "5,372,191"
      WHITESPACE@879..884 "     "
      TEXT@884..885 "|"
      WHITESPACE@885..886 " "
      TABLE_CELL@886..893
        TEXT@886..893 "323,802"
      WHITESPACE@893..900 "       "
      TEXT@900..901 "|"
      NEWLINE@901..902 "\n"
    TABLE_SEPARATOR@902..984
      TEXT@902..983 "+-------------------- ..."
      NEWLINE@983..984 "\n"
    TABLE_ROW@984..1066
      TEXT@984..985 "|"
      WHITESPACE@985..986 " "
      TABLE_CELL@986..992
        TEXT@986..992 "Sweden"
      WHITESPACE@992..1008 "                "
      TEXT@1008..1009 "|"
      WHITESPACE@1009..1010 " "
      TABLE_CELL@1010..1019
        TEXT@1010..1019 "Stockholm"
      WHITESPACE@1019..1032 "             "
      TEXT@1032..1033 "|"
      WHITESPACE@1033..1034 " "
      TABLE_CELL@1034..1044
        TEXT@1034..1044 "10,313,447"
      WHITESPACE@1044..1048 "    "
      TEXT@1048..1049 "|"
      WHITESPACE@1049..1050 " "
      TABLE_CELL@1050..1057
        TEXT@1050..1057 "450,295"
      WHITESPACE@1057..1064 "       "
      TEXT@1064..1065 "|"
      NEWLINE@1065..1066 "\n"
    TABLE_SEPARATOR@1066..1148
      TEXT@1066..1147 "+==================== ..."
      NEWLINE@1147..1148 "\n"
    TABLE_FOOTER@1148..1230
      TEXT@1148..1149 "|"
      WHITESPACE@1149..1150 " "
      TABLE_CELL@1150..1155
        TEXT@1150..1155 "Total"
      WHITESPACE@1155..1172 "                 "
      TEXT@1172..1173 "|"
      WHITESPACE@1173..1196 "                       "
      TABLE_CELL@1196..1196
      TEXT@1196..1197 "|"
      WHITESPACE@1197..1198 " "
      TABLE_CELL@1198..1208
        TEXT@1198..1208 "27,376,022"
      WHITESPACE@1208..1212 "    "
      TEXT@1212..1213 "|"
      WHITESPACE@1213..1214 " "
      TABLE_CELL@1214..1223
        TEXT@1214..1223 "1,258,336"
      WHITESPACE@1223..1228 "     "
      TEXT@1228..1229 "|"
      NEWLINE@1229..1230 "\n"
    TABLE_SEPARATOR@1230..1312
      TEXT@1230..1311 "+==================== ..."
      NEWLINE@1311..1312 "\n"
    BLANK_LINE@1312..1313
      BLANK_LINE@1312..1313 "\n"
    TABLE_CAPTION@1313..1380
      TABLE_CAPTION_PREFIX@1313..1315 ": "
      TEXT@1315..1339 "States belonging to the "
      EMPHASIS@1339..1349
        EMPHASIS_MARKER@1339..1340 "*"
        TEXT@1340..1348 "Nordics."
        EMPHASIS_MARKER@1348..1349 "*"
      WHITESPACE@1349..1350 " "
      ATTRIBUTE@1350..1379
        TEXT@1350..1351 "{"
        ATTR_ID@1351..1359 "#nordics"
        WHITESPACE@1359..1360 " "
        ATTR_KEY_VALUE@1360..1378
          ATTR_KEY@1360..1366 "source"
          TEXT@1366..1367 "="
          ATTR_VALUE@1367..1378 "\"wikipedia\""
        TEXT@1378..1379 "}"
      NEWLINE@1379..1380 "\n"
