crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_article_leading_indent_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..28
  HTML_BLOCK@0..28
    HTML_BLOCK_TAG@0..12
      TEXT@0..11 "  <article>"
      NEWLINE@11..12 "\n"
    HTML_BLOCK_CONTENT@12..28
      TEXT@12..16 "body"
      NEWLINE@16..17 "\n"
      TEXT@17..27 "</article>"
      NEWLINE@27..28 "\n"
